# BSPDemo

./: CMakeLists.txt
res/: de_aztec.wad  demo.ini
src/: BSPDemo.cpp  BSPDemo.sln  BSPDemo.vcxproj  BSPDemo.vcxproj.filters  Characters.txt  Common.cpp  Common.h  Edict.cpp  Edict.h  Events.cpp  Events.h  GLFuncs.cpp  GLFuncs.h  GLSys.cpp  GLSys.h  Keys.cpp  Keys.h  MathLib.h  MathLib.inl  Menu.cpp  Menu.h  Model.cpp  Model.h  Precompiled.cpp  Precompiled.h  Renderer.cpp  Renderer.h  Wad.cpp  Wad.h
